--- a/build.xml
+++ b/build.xml
@@ -50,7 +50,14 @@
         <pathelement location="${basedir}/jars/findbugs-annotations.jar"/>
     </path>
     <path id="junit.classpath">
+        <pathelement location="${basedir}/test/lib/approvaltests-14.0.0.jar" />
+        <pathelement location="${basedir}/test/lib/approvaltests-util-14.0.0.jar" />
+        <pathelement location="${basedir}/test/lib/documentationtesting-1.2.0.jar" />
         <pathelement location="${basedir}/test/lib/junit.jar" />
+        <pathelement location="${basedir}/test/lib/junit-jupiter-api-5.8.2.jar" />
+        <pathelement location="${basedir}/test/lib/javaparser-core-3.24.0.jar" />
+        <pathelement location="${basedir}/test/lib/javassist-3.28.0-GA.jar" />
+        <pathelement location="${basedir}/test/lib/reflections-0.10.2.jar" />
     </path>
     <path id="freecol.build.classpath">
         <path refid="libraries.classpath" />
